@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>pepperModules-ToolboxTextModules</artifactId>
-	<version>2.0.0-SNAPSHOT</version>
+	<version>1.1.1</version>
 	<packaging>bundle</packaging>
 	<name>ToolboxTextModules</name>
 	<description>Modules bundle for the Pepper conversion framework for linguistic data.
@@ -32,17 +31,16 @@
 			<id>ossrh</id>
 			<url>http://oss.sonatype.org/content/repositories/snapshots</url>
 		</snapshotRepository>
-		<!-- Site to deploy documentation to. -->
+		<!-- Site to deploy documentation to.
 		<site>
 			<id>github-project-site</id>
 			<url>gitsite:git@github.com/sdruskat/pepperModules-ToolboxTextModules.git</url>
-		</site>
+		</site> -->
 	</distributionManagement>
 	<scm>
 		<connection>scm:git:git://github.com/sdruskat/pepperModules-ToolboxTextModules.git</connection>
 		<developerConnection>scm:git:git@github.com:sdruskat/pepperModules-ToolboxTextModules.git</developerConnection>
 		<url>https://github.com/sdruskat/pepperModules-ToolboxTextModules</url>
-		<tag>HEAD</tag>
 	</scm>
 	<organization>
 		<name>MelaTAMP research project, Humboldt-Universität zu Berlin</name>
@@ -94,7 +92,7 @@
 			<version>1.1.3</version>
 		</dependency>
 	</dependencies>
-<build>
+	<build>
 		<plugins>
 			<plugin>
 				<artifactId>maven-javadoc-plugin</artifactId>
@@ -149,13 +147,34 @@
 				</executions>
 			</plugin>
 			<!-- RELEASE PLUGIN -->
-			<!-- <plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-release-plugin</artifactId><version>2.5.3</version><configuration><goals>deploy site-deploy</goals><tagNameFormat>@{project.version}</tagNameFormat></configuration></plugin>-->
 			<plugin>
-				<groupId>external.atlassian.jgitflow</groupId>
-				<artifactId>jgitflow-maven-plugin</artifactId>
-				<version>1.0-m5.1</version>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>3.0.0-M1</version>
 				<configuration>
-					<pushReleases>true</pushReleases>
+					<goals>deploy site-deploy</goals>
+					<tagNameFormat>@{project.version}</tagNameFormat>
+				</configuration>
+			</plugin>
+			<!-- USE GITFLOW -->
+			<plugin>
+				<groupId>com.amashchenko.maven.plugin</groupId>
+				<artifactId>gitflow-maven-plugin</artifactId>
+				<version>1.15.1</version>
+				<configuration>
+					<gpgSignTag>true</gpgSignTag>
+					<gpgSignCommit>true</gpgSignCommit>
+					<verbose>true</verbose>
+					<skipFeatureVersion>true</skipFeatureVersion>
+					<versionDigitToIncrement>1</versionDigitToIncrement>
+					<pushRemote>true</pushRemote>
+					<keepRemote>false</keepRemote>
+					<digitsOnlyDevVersion>true</digitsOnlyDevVersion>
+					<versionsForceUpdate>true</versionsForceUpdate>
+					<gitFlowConfig>
+						<versionTagPrefix>v</versionTagPrefix>
+					</gitFlowConfig>
+					<!-- <postReleaseGoals>deploy</postReleaseGoals> -->
 				</configuration>
 			</plugin>
 			<!-- gpg sign -->
@@ -181,6 +200,21 @@
 				<configuration>
 					<skip>true</skip>
 				</configuration>
+			</plugin>
+			<!-- Set memory for Surefire plugin -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<forkCount>3</forkCount>
+					<reuseForks>true</reuseForks>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>co.enear.maven.plugins</groupId>
+				<artifactId>keepachangelog-maven-plugin</artifactId>
+				<version>2.1.1</version>
 			</plugin>
 		</plugins>
 		<extensions>
